--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="wrapper-right">
       <div class="title">Список преподавателей моей школы</div>
       <table>
-        <tbody>
+        <thead>
           <tr>
             <th>Предмет</th>
             <th>Кол-во часов/нед.</th>
@@ -42,17 +42,8 @@
             <th>Учебное заведение</th>
             <th>Специальность</th>
           </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td class="delete"><div class="delete-btn">-</div></td>
-          </tr>
+        </thead>
+        <tbody>
         </tbody>
       </table>
     </div>
