--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <title>Document</title>
 </head>
 <body>
-  <!-- <img src="../image/screen.png"> -->
+  <img src="./image/ghost.png">
 </body>
 </html>
