--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <title>Document</title>
 </head>
 <body>
-  <img src="./image/ghost.png">
+  <div class="wrapper">
+    <div class="flight-field">
+      <img src="./image/ghost.png">
+    </div>
+    <div class="buttons">
+      <button class="start">СТАРТ/ПАУЗА</button>
+      <button class="reset">СБРОС</button>
+    </div>
+  </div>
 </body>
 </html>
