Асинхронность. getData и  sendData - прием и отправка данных

--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
+  <!-- <link rel="stylesheet" href="./style.css"> -->
   <script src="./script.js" defer ></script>
   <title>Document</title>
 </head>
 <body>
-  <img src="./image/ghost.png">
+  <img src="./image/ghost.png" width="80" height="100">
+  <div class="container">
+    <h1 class="title">Fetch</h1>
+    <form action="#" id="form">
+      <input type="text" name="username" id="username">
+      <input type="text" name="password" id="password">
+      <button type="submit" id="btn">Submit</button>
+    </form>
+  </div>
 </body>
 </html>
