Составление списка имен из файла json и вывод карточки по выбранному имени

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <title>Document</title>
 </head>
 <body>
-  <img src="./image/ghost.png">
+  <div class="container">
+    <h1 class="title">Тачки</h1>
+    <select name="" id="">
+      <option value="" selected>Выберите тачку</option>
+    </select>
+    <div class="res"></div>
+  </div>
 </body>
 </html>
